--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ td {
     margin: 0% 1%;
     text-align: center;
     font-family: 'Padauk', sans-serif;
-    padding: -1%;
+    padding: 1%;
+  font-size:20px;
     
 }
 
