--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ td {
     margin: 0% 1%;
     text-align: center;
     font-family: 'Padauk', sans-serif;
- 
-  font-size:30px;
+ padding:1%;
+  font-size:35px;
     
 }
 
