--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@ h2 {
     font-size: 160%;
     text-transform: capitalize;
 }
-    
+theader{
+  font-weight:bolder;
+  text-transform:capitalize;
+      }
     
     </style>
   </head>
