--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ td {
     text-align: center;
     font-family: 'Padauk', sans-serif;
  padding:6%;
-  font-size:30px;
+  font-size:10%;
     
 }
 
