--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ td {
     margin: 0% 1%;
     text-align: center;
     font-family: 'Padauk', sans-serif;
- padding:6%;
-  font-size:10%;
+ padding:4%;
+  font-size:27px;
     
 }
 
