--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Affectionately called as <strong>‘Balu’</strong> in his friends’ circle, S
     
     <div id="tribute-info">
       <h2 id="early_life" style="text-transform: capitalize; padding:30px 0px;text-decoration: underline;font-size:170%;">early life</h2>
-      <img id="img-3" src="https://i.postimg.cc/QtYpbjLk/spb-child.jpg" alt="spb-childhood">
+      <img id="img-3" src="https://i.postimg.cc/L69Df3hG/child.jpg" alt="spb-childhood">
       <p id="content">
 SPB was born in Nellore into a Telugu family. His father, late S. P. Sambamurthy, was a Harikatha artist who had also acted in plays. His mother was Sakunthalamma. He has two brothers and five sisters, including singer S. P. Sailaja. His son is S. P. Charan who is also a popular south Indian singer, actor and a producer.<br><br>
 
@@ -261,7 +261,7 @@ In 1989, Balasubrahmanyam was the playback singer for actor Salman Khan in the b
 
 Notable among these was Hum Aapke Hain Koun..! which became the all time highest-grossing Hindi film, and Balasubrahmanyam’s duet with Lata Mangeshkar, “Didi Tera Devar Deewana”, was very popular. This solidified Balasubrahmanyam as one of the biggest playback singers in India. SPB was identified as Salman Khan’s voice in the 90s, just like Kishore Kumar became Rajesh Khanna’s voice through the 70s.</p>
       <h3> Association with other composers, including A.R. Rahman: 1990s</h3>
-      <img src="https://i.postimg.cc/cCX4YLV0/ar-spb.jpg" alt="with ARRahuman" id="img-3">
+      <img src="https://i.postimg.cc/CLxCdMQg/ar.jpg" alt="with ARRahuman" id="img-3">
       <p id="content">In the 1990s, he worked with composers such as Vidyasagar, M. M. Keeravani, S. A. Rajkumar and Deva among others, but his association with A.R.Rahman turned out be a major success.<br><br>
 
 Balasubramanyam’s association with Hamsalekha began after the latter’s successful venture Premaloka in Kannada. Balasubramanyam sung the most songs for Hamsalekha in Kannada. He received his fourth National Film Award for Best Male Playback Singer for the song “Umandu Ghumandu” from the Kannada film Ganayogi Panchakshari Gavayi (1995), which was a Hindustani classical music-based composition by Hamsalekha.<br><br>
@@ -272,7 +272,7 @@ Balasubrahmanyam recorded three songs for A. R. Rahman in his debut film Roja. H
 
 In May 2020, SPB crooned a song on humanity titled “Bharath Bhoomi” which was composed by Ilaiyaraaja as a tribute to the people such as police, army, doctors, nurses and janitors who have been significantly working amid COVID-19 pandemic. The video song was officially unveiled by Ilaiyaraaja through his official YouTube account on 30 May 2020 in both Tamil and Hindi languages.</p>
       <h2 style="text-transform: capitalize; padding:30px 0px;text-decoration: underline;font-size:170%;">voice acting</h2>
-       <img src="https://i.postimg.cc/05345s6w/voice-act-spb.jpg" alt="with ARRahuman" id="img-3">
+       <img src="https://i.postimg.cc/8PZHbf6c/voice.jpg" alt="with ARRahuman" id="img-3">
       
       <p id="content">Balasubrahmanyam accidentally became a dubbing artist with K. Balachander’s film Manmadha Leela, the dubbed Telugu version of Manmadha Leelai, providing a voice-over for Kamal Haasan.<br><br>
 
